# rdns

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  plan.md
rdns/: Cargo.toml  build.rs
rdns-common/: Cargo.toml
rdns-common/src/: lib.rs
rdns-ebpf/: Cargo.toml
rdns-ebpf/src/: common.rs  tc.rs  tc_prog.rs  xdp.rs  xdp_prog.rs
rdns/src/: config.rs  dns_parser.rs  ebpf_loader.rs  event_handler.rs  filter.rs  main.rs  metrics.rs
rdns/src/api/: handlers.rs  mod.rs  routes.rs
scripts/: package.sh
